--- a/solo/templates/admin/solo/object_history.html
+++ b/solo/templates/admin/solo/object_history.html
@@ -3,13 +3,10 @@
 {% load url from future %}
 
 {% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a> &rsaquo; 
-<a href="../../">{{ app_label|capfirst|escape }}</a> &rsaquo; 
-<a href="../">{{ object|truncatewords:"18" }}</a> &rsaquo; 
-{% trans 'History' %}
-
-</div>
+    <ul class="grp-horizontal-list">
+        <li><a href="{% url 'admin:index' %}">{% trans 'Home' %}</a></li>
+        <li><a href="../../">{{ app_label|capfirst|escape }}</a></li>
+        <li><a href="../">{{ object|truncatewords:"18" }}</a></li>
+        <li>{% trans 'History' %}</li>
+    </ul>
 {% endblock %}
-
-
